# Hermes-CloakManager-Patch

./: .gitignore  LICENSE  MANIFEST.md  README.md  install.sh  uninstall.sh
client/: config.bat.example  connect-cloak.bat  connect-dashboard.bat
client/examples/: README.md  connect-cdp-proxy.bat.example  connect-cloak-manager.bat.example  connect-dashboard.bat.example  show-token.bat.example  ssh-shell.bat.example  verify-remote.bat.example
config/: config.yaml.snippet  gateway-drop-in.conf  manager.env.example
docker/: run-manager.sh
nginx/: cloak-cdp-proxy.conf.template  cloak-upgrade-map.conf
plugin/: README.md  pyproject.toml
plugin/hermes_plugin_cloak/: __init__.py  browser_pool.py  hooks.py  manager_client.py  profile_state.py  tools_browser.py  tools_hybrid.py  tools_input.py  tools_manage.py
plugin/hermes_plugin_cloak/humanize/: __init__.py
plugin/tests/: test_browser_guard.py  test_captcha.py  test_humanize_math.py  test_manager_client.py  test_module_hook.py
scripts/: bootstrap.sh  cloak-backup.sh  get-token.sh  merge_plugin_enabled.py  sanitize-for-release.sh  sync-from-vps.sh  verify.sh
skills/cloak-account-registration/: SKILL.md
skills/cloak-proxy-pool/: SKILL.md  pool.py
skills/notletters-api/: SKILL.md  notletters.py
systemd/: cloak-backup.service  cloak-backup.timer  hermes-gateway.service.example
